# deskpet

./: .gitignore  .gitmodules  FRAMEWORK_PATCHES.md  README.en.md  README.md  build.gradle.kts  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/muxiao/deskpet/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ColorUtils.hpp  ControllerEngine.cpp  ControllerEngine.hpp  Cubism2MocLoader.cpp  Cubism2MocLoader.hpp  Cubism2ModelSetting.cpp  Cubism2ModelSetting.hpp  Cubism2ParamBridge.cpp  Cubism2ParamBridge.hpp  CubismFadeController.hpp  DrawableUtils.hpp  JniBridgeC.cpp  JniBridgeC.hpp  LAppDefine.cpp  LAppDefine.hpp  LAppDelegate.cpp  LAppDelegate.hpp  LAppLive2DManager.cpp  LAppLive2DManager.hpp  LAppModel.cpp  LAppModel.hpp  LAppModelCubism2.cpp  LAppModelCubism2.hpp  LAppPal.cpp  LAppPal.hpp  LAppTextureManager.cpp  LAppTextureManager.hpp  LAppView.cpp  LAppView.hpp  ModelConfigParser.cpp  ModelConfigParser.hpp  MotionGroupUtils.hpp  MotionLayer.hpp  MotionSequencer.cpp  MotionSequencer.hpp  PendingMotion.hpp  RandomSpeaker.cpp  RandomSpeaker.hpp  TriangleHitTest.hpp
app/src/main/java/com/muxiao/deskpet/: ActionMenuManager.java  EdgeHideManager.java  FileUtils.java  FloatingWindowService.java  LpkUnpacker.java  MainActivity.java  (+3 more)
app/src/main/res/values/: arrays.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-zh-rCN/: arrays.xml  strings.xml
app/src/main/res/values-zh-rTW/: arrays.xml  strings.xml
(+7 files in other folders)
